# prac8Python

./: kgropounds.py  nikola.py  pyproject.toml  realstring.py  soda.py  transaction.py  trianglechecker.py
